# crabsay-tauri

./: .gitignore  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  vue.config.js
.github/workflows/: release.yml
report/: ReportCrossDev_p2_Peter_Leconte.md  ReportCrossDev_p3_Peter_Leconte.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: draw.rs  error.rs  main.rs  prelude.rs
src-tauri/src/draw/: draw_utils.rs  generator.rs  image_asset.rs
src/common/: util.ts
src/router/: index.ts
src/services/: settings.ts
src/util/: draw.ts  haptics.ts  image-generation.ts  save-image.ts  toast.ts
src/views/: CreatorPage.vue  GeneratorPage.vue  TabsPage.vue
