[package]
name = "crabsay"
version = "0.1.2"
description = "A Tauri App"
authors = ["Peter Leconte"]
license = "MIT"
repository = ""
default-run = "crabsay"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["dialog-save", "protocol-asset"] }

thiserror = "1.0"

image = "0.24.5"
imageproc = "0.23.0"
raqote = { version = "0.8", features = ["text"] }
rand = "0.8.5"
anyhow = "1.0"
hex = "0.4"
png = "0.16"
font-kit = "0.7"

# [profile.release.package.image]
[profile.release.package.image]
opt-level = 3
debug = false
overflow-checks = false
[profile.dev.package.image]
opt-level = 3
debug = false
overflow-checks = false
[profile.bench.package.image]
opt-level = 3
debug = false
overflow-checks = false

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
